Fixinf text alignment of calendar grid cells

--- a/packages/bpk-component-calendar/src/bpk-calendar.scss
+++ b/packages/bpk-component-calendar/src/bpk-calendar.scss
@@ -82,6 +82,7 @@ $calendar-height: 6 * ($bpk-calendar-day-size + $bpk-calendar-day-spacing);
 
   &__date {
     padding: $bpk-calendar-day-spacing ($bpk-calendar-day-spacing / 2) 0 ($bpk-calendar-day-spacing / 2);
+    text-align: center;
     vertical-align: middle;
 
     &--weekend-start {
